Bug 428339 - touchpad settings can not be changed with wayland
Summary: touchpad settings can not be changed with wayland
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_touchpad (other bugs)
Version First Reported In: 5.20.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-27 13:12 UTC by dutchkind
Modified: 2020-10-28 21:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dutchkind 2020-10-27 13:12:02 UTC
SUMMARY
When starting Plasma in a Full Wayland session I can edit the touchpad settings. However, when I start Plasma in a Wayland session the touchpad settings tell me no touchpad was found. I discovered that I can change the touchpad settings by first logging into Wayland Full, change them there, and then in Wayland and the same settings are applied there.

Btw, when using Xorg everything works as expected, so there is only a difference between Wayland and Full Wayland

STEPS TO REPRODUCE
1. Start Plasma Wayland
2. Go to touchpad configuration
3. 

OBSERVED RESULT
Greyed out

EXPECTED RESULT
Workable configuration for touchpad

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Opensuse Tumbleweed
(available in About System)
KDE Plasma Version: 5.20.1
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1

ADDITIONAL INFORMATION
Comment 1 Justin Zobel 2020-10-27 22:50:24 UTC
Please file this report on the openSUSE bug tracker as this is a distro specific issue, thanks.
Comment 3 Fabian Vogt 2020-10-28 21:13:06 UTC
Git commit f8f235cc31dbb01fab042b7ec5a3185ab193b0bd by Fabian Vogt.
Committed on 28/10/2020 at 19:06.
Pushed by fvogt into branch 'master'.

Fix call to KWorkSpace::detectPlatform

This sets QT_QPA_PLATFORM, so has to happen before the QApplication is
created.

M  +3    -1    app/main.cpp

https://invent.kde.org/plasma/systemsettings/commit/f8f235cc31dbb01fab042b7ec5a3185ab193b0bd
Comment 4 Fabian Vogt 2020-10-28 21:13:38 UTC
Git commit ca5a4e1439bb7cb11afcf6b386bb937971a185b0 by Fabian Vogt.
Committed on 28/10/2020 at 21:13.
Pushed by fvogt into branch 'Plasma/5.20'.

Fix call to KWorkSpace::detectPlatform

This sets QT_QPA_PLATFORM, so has to happen before the QApplication is
created.


(cherry picked from commit f8f235cc31dbb01fab042b7ec5a3185ab193b0bd)

M  +3    -1    app/main.cpp

https://invent.kde.org/plasma/systemsettings/commit/ca5a4e1439bb7cb11afcf6b386bb937971a185b0