Fix call to KWorkSpace::detectPlatform

This sets QT_QPA_PLATFORM, so has to happen before the QApplication is
created.

BUG: 428339


(cherry picked from commit f8f235cc31dbb01fab042b7ec5a3185ab193b0bd)